--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -1,8 +1,9 @@
-/*!
+/* /*!
  * Start Bootstrap - Grayscale v3.3.7+1 (http://startbootstrap.com/template-overviews/grayscale)
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+
  body {
   width: 100%;
   height: 100%;
@@ -223,9 +224,10 @@ a:focus {
 .download-section {
   width: 100%;
   padding: 50px 0;
-  color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-  background-color: black;
+  color: black;
+  /* background: url(../img/downloads-bg.jpg) no-repeat center center scroll; */
+
+  background-color: white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -311,4 +313,10 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+}
+
+
+.logo-img {
+  width: 20%;
+  height: 20%;
 }
