--- a/css/mainstylesheet.css
+++ b/css/mainstylesheet.css
@@ -22,7 +22,13 @@ h1{
   text-align: center;
 }
 
-img {
-  width: 100%;
-  height: 100%;
+.backgroundPic {
+  background-image: url('../img/techbackgroundpic1.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+}
+
+pre > h1 {
+  margin-top: 130px;
 }
