added the links to my github and linkedIn

--- a/css/mainstylesheet.css
+++ b/css/mainstylesheet.css
@@ -32,3 +32,19 @@ h1{
 pre > h1 {
   margin-top: 130px;
 }
+
+.introPhoto {
+background-image: url('../img/me.jpg');
+background-size: contain;
+background-repeat: no-repeat;
+width: 500px;
+height: 300px;
+}
+
+.linkedInLink {
+  color: #0e76a8;
+}
+
+.gitHubLink {
+  color: black;
+}
