--- a/css/mainstylesheet.css
+++ b/css/mainstylesheet.css
@@ -98,16 +98,26 @@ height: 300px;
   background-color: #a29dd7;
   width: 230px;
   height: 300px;
+  margin: 0px 50px;
 }
 
 .projImage {
   margin: 5px auto 0px auto;
   width: 200px;
-  height: 200px;
+  height: 120px;
 }
 
 .holidaySales {
 background-image: url('../img/hslandingpage.JPG');
 background-repeat: no-repeat;
 background-size: contain;
+}
+
+a > ul {
+  color:black;
+}
+
+a:hover {
+  color: none !important;
+  text-decoration: none !important;
 }
