--- a/spectral/assets/css/main.css
+++ b/spectral/assets/css/main.css
@@ -3964,6 +3964,13 @@ input, select, textarea {
 
 .all-Icons {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	margin-top: 2rem;
+	justify-content: space-evenly;
+}
+
+.all-Icons1 {
+	display: flex;
+	margin-top: 2rem;
+	margin-right: 1rem;
+	justify-content: space-evenly;
 }
