--- a/spectral/assets/css/main.css
+++ b/spectral/assets/css/main.css
@@ -3965,3 +3965,20 @@ input, select, textarea {
 	margin-right: 1rem;
 	justify-content: space-evenly;
 }
+
+
+
+.floating {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+
+@keyframes floating {
+    from { transform: translate(0,  0px); }
+    65%  { transform: translate(0, 15px); }
+    to   { transform: translate(0, -0px); }
+}
